ajout remplissage table Problem

--- a/src/app/components/Pages/find-problem-outlet.component.html
+++ b/src/app/components/Pages/find-problem-outlet.component.html
@@ -7,6 +7,7 @@
 
 <h1 class="fs-5">
     <i class="text-info me-3 bi-table fs-5"></i>
-    Orders
+    Problems
 </h1>
 <app-content-placeholder></app-content-placeholder>
+<app-problem-card></app-problem-card>
