--- a/src/app/components/Components/Problem/problem-form.component.html
+++ b/src/app/components/Components/Problem/problem-form.component.html
@@ -6,24 +6,30 @@
 -->
 
 <div class="input-group">
-    <form>
+    <form [formGroup]="innerForm">
         <div class="input-group">
             <span class="input-group-text">
                 Name
             </span>
-            <input class="form-control">
+            <input 
+                class="form-control"
+                type="text"
+                id="first-name"
+                name="first-name"
+                formControlName="first-nameCtrl"
+            />
         </div>
         <div>
             <span class="input-group-text">
                 Description
             </span>
-            <textarea class="form-control"></textarea>
+            <textarea class="form-control" name="description" formControlName="descriptionCtrl"></textarea>
         </div>
         <div class="input-group">
             <span class="input-group-text">
                 Status
             </span>
-            <select class="form-select">
+            <select class="form-select" name="status" formControlName="statusCtrl">
                 <option value="1">
                     Option 1
                 </option>
@@ -43,7 +49,7 @@
             <input class="form-control">
         </div>
         <div>
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" onsubmit="addNewProblem">
                 Validate
             </button>
         </div>
