add cursor rules

--- a/src/app/components/Components/header.component.html
+++ b/src/app/components/Components/header.component.html
@@ -34,7 +34,7 @@
             </form>
             <div ngbDropdown class="flex-shrink-0">
                 <a href="#" ngbDropdownToggle (click)="onHyperlink4Click($event)" class="d-block link-body-emphasis">
-                    <img src="https://i.pravatar.cc/150?img=45" width="32" height="32" class="rounded-circle">
+                    <img src="trump.jpg" width="32" height="32" class="rounded-circle">
                 </a>
                 <div ngbDropdownMenu class="shadow">
                     <button ngbDropdownItem type="button" class="btn">
