--- a/src/app/components/Components/header.component.html
+++ b/src/app/components/Components/header.component.html
@@ -22,8 +22,7 @@
         </div>
         <div class="d-flex align-content-center ms-auto">
             <div class="div-5 d-flex align-items-center px-3">
-                <app-locale-switcher></app-locale-switcher>
-                <a href="#" class="link-body-emphasis ms-2">
+                <a href="#" class="link-body-emphasis">
                     <i class="bi-chat-dots"></i>
                 </a>
             </div>
