affiche correctement la colonne Author

--- a/src/app/components/Components/Problem/problem-card.component.html
+++ b/src/app/components/Components/Problem/problem-card.component.html
@@ -57,7 +57,7 @@
                             {{ currentUserProblemsItem.creationDate | date }}
                         </td>
                         <td>
-                            {{ currentUserProblemsItem.creator }}
+                            {{ getAuthorFullName(currentUserProblemsItem.creator) }}
                         </td>
                         <td>
                             Cell
